code/tui/snapshots/inline/usage/start_plan_usage_chinese_inline.snap
---
source: code/tui/src/app/usage_tests.rs
expression: screen
---

    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘














─ 额度 ─────────────────────────────────────────────────────────────────────────

> BigModel 套餐  ·  Start Trial

  GLM-5.3-Flash 额度 ─────────────────────────────────────────────────────────
  1d 额度  ·  剩余 75%（已用 25%）
  重置时间  ·  2026-10-02 16:00 UTC

  Esc 关闭  ·  运行 /usage 刷新
