code/tui/snapshots/inline/usage/start_plan_usage_inline_narrow.snap
---
source: code/tui/src/app/usage_tests.rs
expression: "render(&app, 48, 28)"
---

    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘














─ Usage ────────────────────────────────────────

> BigModel plan  ·  Start Trial

  GLM-5.3-Flash quota ────────────────────────
  1d window  ·  75% left (25% used)
  Resets  ·  2026-10-02 16:00 UTC

  Esc to close  ·  Run /usage to refresh
