code/tui/snapshots/inline/usage/usage_dismissed.snap
---
source: code/tui/src/app/usage_tests.rs
expression: "render(&app, 80, 16)"
---











────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────

  ⏸ Manual · ← Dashboard · ? for shortcuts
